[package]
name = "s3"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "s3-server"
path = "src/main.rs"

[dependencies]
# S3 protocol
s3s = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "http1", "http2"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hashing (ETag = MD5 of content)
md-5 = "0.10"
hex = "0.4"

# Utilities
bytes = "1"
futures = "0.3"
serde_json = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
