[package]
name = "s3"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "s3-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
chdb-rust = "1.3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hex = "0.4"
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "http1", "http2"] }
md-5 = "0.10"
s3s = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
